--- a/modules/installation-vsphere-installer-infra-requirements.adoc
+++ b/modules/installation-vsphere-installer-infra-requirements.adoc
@@ -1,47 +1,38 @@
 // Module included in the following assemblies for vSphere:
 //
 // * installing/installing_vsphere/ipi/ipi-vsphere-installation-reqs.adoc
-// * installing/installing_vsphere/installing-vsphere.adoc
-// * installing/installing_vsphere/installing-vsphere-network-customizations.adoc
-// * installing/installing_vsphere/installing-restricted-networks-vsphere.adoc
+// * installing_vsphere/upi/upi-vsphere-installation-reqs.adoc
 
-ifeval::["{context}" == "installing-vsphere"]
-:vsphere:
+ifeval::["{context}" == "upi-vsphere-installation-reqs"]
+:upi:
 endif::[]
-ifeval::["{context}" == "installing-vsphere-network-customizations"]
-:vsphere:
-endif::[]
-ifeval::["{context}" == "installing-restricted-networks-vsphere"]
-:vsphere:
-endif::[]
-
 
 [id="installation-vsphere-installer-infra-requirements_{context}"]
 = vCenter requirements
 
-ifndef::vsphere[]
+ifndef::upi[]
 Before you install an {product-title} cluster on your vCenter that uses infrastructure that the installer provisions, you must prepare your environment.
-endif::vsphere[]
+endif::upi[]
 
-ifdef::vsphere[]
+ifdef::upi[]
 Before you install an {product-title} cluster on your vCenter that uses infrastructure that you provided, you must prepare your environment.
-endif::vsphere[]
+endif::upi[]
 
 [discrete]
 [id="installation-vsphere-installer-infra-requirements-account_{context}"]
 == Required vCenter account privileges
 
-ifndef::vsphere[]
+ifndef::upi[]
 To install an {product-title} cluster in a vCenter, the installation program requires access to an account with privileges to read and create the required resources. Using an account that has global administrative privileges is the simplest way to access all of the necessary permissions.
 
 If you cannot use an account with global administrative privileges, you must create roles to grant the privileges necessary for {product-title} cluster installation. While most of the privileges are always required, some are required only if you plan for the installation program to provision a folder to contain the {product-title} cluster on your vCenter instance, which is the default behavior. You must create or amend vSphere roles for the specified objects to grant the required privileges.
 
 An additional role is required if the installation program is to create a vSphere virtual machine folder.
-endif::vsphere[]
+endif::upi[]
 
-ifdef::vsphere[]
+ifdef::upi[]
 To install an {product-title} cluster in a vCenter, your vSphere account must include privileges for reading and creating the required resources. Using an account that has global administrative privileges is the simplest way to access all of the necessary permissions.
-endif::vsphere[]
+endif::upi[]
 
 
 .Roles and privileges required for installation in vSphere API
@@ -398,15 +389,15 @@ If you must specify VMs across multiple datastores, use a `datastore` object to 
 [id="installation-vsphere-installer-infra-requirements-resources_{context}"]
 == Cluster resources
 
-ifndef::vsphere[]
+ifndef::upi[]
 When you deploy an {product-title} cluster that uses installer-provisioned infrastructure, the installation program must be able to create several resources in your vCenter instance.
 
 A standard {product-title} installation creates the following vCenter resources:
-endif::vsphere[]
+endif::upi[]
 
-ifdef::vsphere[]
+ifdef::upi[]
 When you deploy an {product-title} cluster that uses infrastructure that you provided, you must create the following resources in your vCenter instance:
-endif::vsphere[]
+endif::upi[]
 
 * 1 Folder
 * 1 Tag category
@@ -430,37 +421,38 @@ Available resources vary between clusters. The number of possible clusters withi
 [discrete]
 [id="installation-vsphere-installer-infra-requirements-networking_{context}"]
 == Networking requirements
-Use Dynamic Host Configuration Protocol (DHCP) for the network and ensure that the DHCP server is configured to provide persistent IP addresses to the cluster machines.
+
+You can use Dynamic Host Configuration Protocol (DHCP) for the network and configure the DHCP server to set persistent IP addresses to machines in your cluster. In the DHCP lease, you must configure the DHCP to use the default gateway.
 
 [NOTE]
 ====
 You do not need to use the DHCP for the network if you want to provision nodes with static IP addresses.
 ====
 
-Configure the default gateway to use the DHCP server. All nodes must be in the same VLAN. You cannot scale the cluster using a second VLAN as a Day 2 operation.
-
-You must use the Dynamic Host Configuration Protocol (DHCP) for the network and ensure that the DHCP server is configured to provide persistent IP addresses to the cluster machines. In the DHCP lease, you must configure the DHCP to use the default gateway. All nodes must be in the same VLAN. You cannot scale the cluster using a second VLAN as a Day 2 operation.
+ifdef::upi[]
+If you specify nodes or groups of nodes on different VLANs for a cluster that you want to install on user-provisioned infrastructure, you must ensure that machines in your cluster meet the requirements outlined in the "Network connectivity requirements" section of the _Networking requirements for user-provisioned infrastructure_ document.
+endif::upi[]
 
 If you are installing to a restricted environment, the VM in your restricted network must have access to vCenter so that it can provision and manage nodes, persistent volume claims (PVCs), and other resources.
 
-Additionally, you must create the following networking resources before you install the {product-title} cluster:
-
 [NOTE]
 ====
-It is recommended that each {product-title} node in the cluster must have access to a Network Time Protocol (NTP) server that is discoverable via DHCP. Installation is possible without an NTP server. However, asynchronous server clocks will cause errors, which NTP server prevents.
+Ensure that each {product-title} node in the cluster has access to a Network Time Protocol (NTP) server that is discoverable by DHCP. Installation is possible without an NTP server. However, asynchronous server clocks can cause errors, which the NTP server prevents.
 ====
+
+Additionally, you must create the following networking resources before you install the {product-title} cluster:
 
 [discrete]
 [id="installation-vsphere-installer-infra-requirements-_{context}"]
 === Required IP Addresses
-ifndef::vsphere[]
+ifndef::upi[]
 For a network that uses DHCP, an installer-provisioned vSphere installation requires two static IP addresses:
 
 * The **API** address is used to access the cluster API.
 * The **Ingress** address is used for cluster ingress traffic.
 
 You must provide these IP addresses to the installation program when you install the {product-title} cluster.
-endif::vsphere[]
+endif::upi[]
 
 [discrete]
 [id="installation-vsphere-installer-infra-requirements-dns-records_{context}"]
@@ -489,12 +481,6 @@ default. This record must be resolvable by both clients external to the cluster
 and from all the nodes within the cluster.
 |===
 
-ifeval::["{context}" == "installing-vsphere"]
-:!vsphere:
-endif::[]
-ifeval::["{context}" == "installing-vsphere-network-customizations"]
-:!vsphere:
-endif::[]
-ifeval::["{context}" == "installing-restricted-networks-vsphere"]
-:!vsphere:
+ifeval::["{context}" == "upi-vsphere-installation-reqs"]
+:!upi:
 endif::[]
