--- a/snippets/ibu-ImageBasedGroupUpgrade.adoc
+++ b/snippets/ibu-ImageBasedGroupUpgrade.adoc
@@ -21,6 +21,7 @@ spec:
       pullSecretRef:
         name: "<seed_pull_secret>"
   extraManifests: # <3>
+    - name: example-extra-manifests
       namespace: openshift-lifecycle-agent
   oadpContent: # <4>
     - name: oadp-cm
