--- a/upgrading/rosa-hcp-upgrading.adoc
+++ b/upgrading/rosa-hcp-upgrading.adoc
@@ -8,8 +8,8 @@ toc::[]
 
 include::modules/rosa-hcp-upgrade-options.adoc[leveloffset=+1]
 
-.Additional resources
-* xref:../cli_reference/rosa_cli/rosa-manage-objects-cli.adoc#rosa-edit-machinepool_rosa-managing-objects-cli[ROSA CLI reference: `rosa edit machinepool`]
+// .Additional resources
+// * ../cli_reference/rosa_cli/rosa-manage-objects-cli.adoc#rosa-edit-machinepool_rosa-managing-objects-cli[ROSA CLI reference: `rosa edit machinepool`]
 
 //This cannot be a module if we want to use the xrefs
 [id="rosa-lifecycle-policy_{context}"]
@@ -47,10 +47,21 @@ Upgrading the entire cluster involves upgrading both the hosted control plane an
 * You have installed and configured the latest version of the ROSA CLI.
 * No other upgrades are in progress or scheduled to take place at the same time as this upgrade.
 
+
+ifdef::context[:prevcontext: {context}]
+:context: rosa-hcp-upgrading-whole-cluster
+
 include::modules/rosa-hcp-upgrading-cli-control-plane.adoc[leveloffset=+2]
+
+ifdef::prevcontext[:context: {prevcontext}]
+ifdef::context[:prevcontext: {context}]
+
+:context: rosa-hcp-upgrading-whole-cluster
+
 include::modules/rosa-hcp-upgrading-cli-machinepool.adoc[leveloffset=+2]
-include::modules/rosa-hcp-upgrading-cli-tutorial.adoc[leveloffset=+1]
 
 ifdef::prevcontext[:context: {prevcontext}]
 ifndef::prevcontext[:!context:]
+//LB: Remove until here if we don't want the "whole cluster" upgrade section
+
 include::modules/rosa-hcp-upgrading-cli-tutorial.adoc[leveloffset=+1]
