--- a/_attributes/common-attributes.adoc
+++ b/_attributes/common-attributes.adoc
@@ -40,6 +40,7 @@ endif::[]
 :oadp-short: OADP
 :oadp-version: 1.4.1
 :oadp-version-1-3: 1.3.3
+:oadp-version-1-4: 1.4.1
 :oc-first: pass:quotes[OpenShift CLI (`oc`)]
 :product-registry: OpenShift image registry
 :product-mirror-registry: Mirror registry for Red Hat OpenShift
