OSDOCS-12340:updating the links in storage section

--- a/modules/microshift-updating-pods-mismatch.adoc
+++ b/modules/microshift-updating-pods-mismatch.adoc
@@ -10,7 +10,7 @@ Update the SELinux context of the pods if a mismatch is found by using the follo
 
 .Procedure
 
-. When there is a mismatch of the SELinux content, create a new security context constraint (SCC) and assign it to both pods. To create a SCC, see link:https://docs.openshift.com/container-platform/4.15/authentication/managing-security-context-constraints.html#security-context-constraints-creating_configuring-internal-oauth[Creating security context constraints].
+. When there is a mismatch of the SELinux content, create a new security context constraint (SCC) and assign it to both pods. To create a SCC, see link:https://access.redhat.com/documentation/en-us/openshift_container_platform/{ocp-version}/html/authentication_and_authorization/managing-pod-security-policies#security-context-constraints-creating_configuring-internal-oauth[Creating security context constraints].
 . Update the SELinux context as shown in the following example:
 +
 .Example output
