--- a/modules/microshift-control-permissions-security-context-constraints.adoc
+++ b/modules/microshift-control-permissions-security-context-constraints.adoc
@@ -8,7 +8,7 @@
 
 You can use security context constraints (SCCs) to control permissions for the pods in your cluster. These permissions determine the actions that a pod can perform and what resources it can access. You can use SCCs to define a set of conditions that a pod must run with to be accepted into the system.
 
-For more information see link:https://docs.openshift.com/container-platform/4.16/authentication/managing-security-context-constraints.html[Managing security context constraints].
+For more information see link:https://access.redhat.com/documentation/en-us/openshift_container_platform/{ocp-version}/html/authentication_and_authorization/managing-pod-security-policies[Managing security context constraints].
 
 [IMPORTANT]
 ====
