--- a/modules/osdk-updating-131-to-1361.adoc
+++ b/modules/osdk-updating-131-to-1361.adoc
@@ -62,12 +62,12 @@ FROM registry.redhat.io/openshift4/ose-helm-rhel9-operator:v{product-version}
 ----
 endif::[]
 ifdef::ansible[]
-. Edit your Operator's Dockerfile to update the `ose-ansible-operator` image tag to `{product-version}`, as shown in the following example:
+. Edit your Operator's Dockerfile to update the `ose-ansible-rhel9-operator` image tag to `{product-version}`, as shown in the following example:
 +
 .Example Dockerfile
 [source,docker,subs="attributes+"]
 ----
-FROM registry.redhat.io/openshift4/ose-ansible-operator:v{product-version}
+FROM registry.redhat.io/openshift4/ose-ansible-rhel9-operator:v{product-version}
 ----
 endif::[]
 ifdef::golang,hybrid[]
