--- a/installing/installing_with_agent_based_installer/prepare-pxe-assets-agent.adoc
+++ b/installing/installing_with_agent_based_installer/prepare-pxe-assets-agent.adoc
@@ -45,6 +45,7 @@ include::modules/configuring-network-overrides-ibmz.adoc[leveloffset=+2]
 include::modules/installing-ocp-agent-ibm-z-zvm.adoc[leveloffset=+2]
 
 [role="_additional-resources"]
+.Additional resources
 
 * xref:../../installing/installing_ibm_z/installing-ibm-z.adoc#installing-ibm-z[Installing a cluster with z/VM on {ibm-z-title} and {ibm-linuxone-title}]
 
