Adds the z-stream version in which the limited live migration proc is available for version 4.15.

--- a/modules/nw-ovn-kubernetes-live-migration-about.adoc
+++ b/modules/nw-ovn-kubernetes-live-migration-about.adoc
@@ -5,7 +5,13 @@
 [id="nw-ovn-kubernetes-live-migration-about_{context}"]
 = Limited live migration to the OVN-Kubernetes network plugin overview
 
-The limited live migration method is the process in which the OpenShift SDN network plugin and its network configurations, connections, and associated resources, are migrated to the OVN-Kubernetes network plugin without service interruption. It is available for {product-title}.
+The limited live migration method is the process in which the OpenShift SDN network plugin and its network configurations, connections, and associated resources, are migrated to the OVN-Kubernetes network plugin without service interruption. For {product-title} 4.15, it is available for versions 4.15.31 and later.
+
+[IMPORTANT]
+====
+Before you migrate your {product-title} cluster to use the OVN-Kubernetes network plugin, update your cluster to the latest z-stream release so that all the latest bug fixes apply to your cluster.
+====
+
 // Azure Red Hat OpenShift deployment types will needed added in .z stream.
 It is not available for hosted control plane deployment types. This migration method is valuable for deployment types that require constant service availability and offers the following benefits:
 
@@ -30,16 +36,25 @@ The following table provides information about the supported platforms for the l
 |===
 | Platform              | Limited Live Migration
 
-| Bare metal hardware (IPI and UPI)             |&#10003;
-| Amazon Web Services (AWS) (IPI and UPI)       |&#10003;
-| Google Cloud Platform (GCP) (IPI and UPI)     |&#10003;
-| {ibm-cloud-name} (IPI and UPI)                |&#10003;
-| Microsoft Azure (IPI and UPI)                 |&#10003;
-| {rh-openstack-first} (IPI and UPI)            |&#10003;
-| VMware vSphere (IPI and UPI)                  |&#10003;
-| AliCloud (UPI)                                |&#10003;
-| Nutanix (IPI and UPI)                         |&#10003;
+| Bare-metal hardware   |&#10003;
+| {aws-first}           |&#10003;
+| {gcp-first}           |&#10003;
+| {ibm-cloud-name}      |&#10003;
+| {azure-first}         |&#10003;
+| {rh-openstack-first}  |&#10003;
+| {vmw-first}           |&#10003;
+| Nutanix               |&#10003;
 |===
+
+[NOTE]
+====
+Each listed platform supports installing an {product-title} cluster on installer-provisioned infrastructure and user-provisioned infrastructure.
+====
+
+[id="best-practices-live-migrating-ovn-kubernetes-network-provider_{context}"]
+== Best practices for limited live migration to the OVN-Kubernetes network plugin
+
+For a list of best practices when migrating to the OVN-Kubernetes network plugin with the limited live migration method, see link:https://access.redhat.com/solutions/7057169[Limited Live Migration from OpenShift SDN to OVN-Kubernetes].
 
 [id="considerations-live-migrating-ovn-kubernetes-network-provider_{context}"]
 == Considerations for limited live migration to the OVN-Kubernetes network plugin
