OLS-1167: Document that OLS has not update path for existing installations

--- a/_attributes/common-attributes.adoc
+++ b/_attributes/common-attributes.adoc
@@ -39,6 +39,8 @@
 :azure-official: Microsoft Azure
 :entra-id: Microsoft Entra ID
 :azure-studio: Microsoft Azure OpenAI Studio
+//Operator Lifecycle Manager
+:olm: Operator Lifecycle Manager
 //service mesh v3
 :SMProductName: Red Hat OpenShift Service Mesh
 :SMProductShortName: Service Mesh
