--- a/modules/ols-0-2-0-release-notes.adoc
+++ b/modules/ols-0-2-0-release-notes.adoc
@@ -14,6 +14,8 @@ The following enhancements have been made with {ols-offical} 0.2.0:
 
 * This release introduces the {ols-offical} Operator as a Technology Preview release. Previously, the {ols-short} Operator was a Developer Preview release. 
 
+* Existing Developer Preview installations of {ols-offical} version 0.1.6 and earlier that use the preview {olm} (OLM) channel must switch the update channel to *alpha* and then install the 0.2.0 Technology Preview version.
+
 * Beginning in this release, the {ols-offical} Operator can be installed on an {ocp-product-title} cluster in a disconnected environment.
 
 * With this release, {rhelai} can be configured as the Large Language Model (LLM) provider.
