--- a/backup_and_restore/application_backup_and_restore/oadp-performance/oadp-recommended-network-settings.adoc
+++ b/backup_and_restore/application_backup_and_restore/oadp-performance/oadp-recommended-network-settings.adoc
@@ -8,14 +8,16 @@ include::_attributes/attributes-openshift-dedicated.adoc[]
 
 toc::[]
 
-For a supported experience with {oadp-first}, you should have a stable and resilient network across {OCP-short} nodes, S3 storage, and in supported cloud environments.
+For a supported experience with {oadp-first}, you should have a stable and resilient network across {OCP-short} nodes, S3 storage, and in supported cloud environments that meet {OCP-short} network requirement recommendations.
 
-To ensure successful backup and restore operations, Red Hat recommends that your network settings meet the following minimum requirements:
+To ensure successful backup and restore operations for deployments with remote S3 buckets located off-cluster with suboptimal data paths, Red Hat recommends that your network settings meet the following minimum requirements in such less optimal conditions:
 
 * Bandwidth (network upload speed to object storage): Greater than 2 Mbps for small backups and 10-100 Mbps depending on the data volume for larger backups.
-* Packet loss: Range 1% to 5%
-* Packet corruption: Range 1% to 5%
-* Latency (Jitter): Range 100ms (±20ms)
+* Packet loss: 1%
+* Packet corruption: 1%
+* Latency: 100ms
+
+Ensure that your OCP network performs optimally and meets OpenShift network requirements.
 
 [IMPORTANT]
 ====
